--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
+    ndkVersion "21.3.6528147"
 
     defaultConfig {
         applicationId "com.pilldetectionapp.pilloid"
