add TextView message

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="face" />
 
-        <activity android:name=".CameraActivity">        </activity>
+        <activity android:name=".CameraActivity"
+            android:screenOrientation="landscape" >
+        </activity>
         <activity android:name=".TakePhotoActivity" />
         <activity android:name=".ActivityChoicePage" />
         <activity android:name=".FirstPageActivity">
