--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity android:name=".TakePhotoActivity" />
         <activity android:name=".ActivityChoicePage" />
+        <activity android:name=".GetTextActivity" />
         <activity android:name=".FirstPageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
