--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
 
+    implementation 'org.tensorflow:tensorflow-lite:2.0.0'
+
 
 }
