add result of steps

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,9 @@
 
         <activity
             android:name=".CameraActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape"
+            ></activity>
+
         <activity android:name=".TakePhotoActivity" />
         <activity android:name=".ActivityChoicePage" />
         <activity android:name=".GetTextActivity" />
