--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".ChangeProfileImageActivity"></activity>
         <activity android:name=".FirstPageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,26 +36,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ActivityChoicePage" />
-
-
         <activity
             android:name=".TakePhotoActivity"
             android:screenOrientation="landscape" />
-
         <activity
             android:name=".GetTextActivity"
             android:screenOrientation="landscape" />
-
         <activity
             android:name=".CameraActivity"
             android:screenOrientation="landscape" />
-
         <activity android:name=".ResultActivity" />
-
-
-
         <activity android:name=".MainActivity" />
 
         <meta-data
